changed course descriptions, fixed score overview logout confirmation, added to dark mode, added a status help button

--- a/avatar/styles.css
+++ b/avatar/styles.css
@@ -39,9 +39,10 @@
     padding: 20px;
     bottom: 0;
     left: 0;
+    margin-top: 10px;
     margin-left: 100px;
     width: 40vh;
-    height: 50vh;
+    height: 42vh;
     color: white;
 }
 
